# psychopy-eyetracker-sr-research

./: .gitignore  CHANGELOG.txt  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: docs.yaml  pypi.yaml  tests.yaml
docs/: index.html  objects.inv  searchindex.js
docs/.doctrees/: download.doctree  environment.pickle  index.doctree
docs/.doctrees/coder/: eyelink.doctree
docs/_modules/: index.html
docs/_modules/psychopy/iohub/devices/eyetracker/eye_events/: index.html
docs/_modules/psychopy_eyetracker_sr_research/sr_research/eyelink/eyetracker/: index.html
docs/_sources/: index.rst.txt
docs/coder/eyelink/: index.html
docs/genindex/: index.html
docs_src/: index.rst
docs_src/coder/: eyelink.rst
psychopy_eyetracker_sr_research/: __init__.py
psychopy_eyetracker_sr_research/sr_research/: __init__.py
psychopy_eyetracker_sr_research/sr_research/eyelink/: __init__.py  calibration.py  default_eyetracker.yaml  eyetracker.py  settings.py  supported_config_settings.yaml
tests/test_builder/: test_eyetracker_backend.py
