[build-system]
requires = ["setuptools>=40.8.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "psychopy-eyetracker-sr-research"
version = "0.0.3"
description = "Extension package for PsychoPy which adds support for SR Research eyetrackers (via ioHub)."
readme = "README.md"
requires-python = ">= 3.7"
license = {text = "GNU General Public License v3 (GPLv3)"}
authors = [
  { name = "Sol Simpson", email = "info@isolver-software.com" },
  { name = "Matthew Cutone", email = "mcutone@opensceincetools.org" },
  { name = "Jon Peirce", email = "jon@opensceincetools.org" },
]
classifiers = [
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
]
urls.homepage = "https://github.com/psychopy/psychopy-eyetracker-sr-research"
urls.changelog = "https://github.com/psychopy/psychopy-eyetracker-sr-research/blob/main/CHANGELOG.txt"
urls.documentation = "https://pages.github.com/psychopy/psychopy-eyetracker-sr-research"
urls.repository = "https://github.com/psychopy/psychopy-eyetracker-sr-research"
dependencies = [
  "pylink",
]

[project.optional-dependencies]
# dependencies for building the docs
docs = [
  "psychopy",
  "sphinx",
  "furo",
]
# dependencies for running the test suite
tests = [
  "psychopy",
  "pytest",
]

[tool.setuptools.packages.find]
where = ["", "psychopy_eyetracker_sr_research",]

[project.entry-points."psychopy.iohub.devices"]
EyeTracker = "psychopy_eyetracker_sr_research.sr_research.eyelink.eyetracker:EyeTracker"

[project.entry-points."psychopy.iohub.devices.eyetracker"]
EyeTracker = "psychopy_eyetracker_sr_research.sr_research.eyelink.eyetracker:EyeTracker"

[tool.setuptools.package-data]
"*" = ["*.yaml"]
